--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
@@ -25,8 +25,8 @@
     <table id="tablalista" class="table table-bordered table-condensed" style="width: 97%;">
         <thead>
             <tr>
-                <th>NOMBRE</th>
-                <th>ACCIONES</th>
+                <th>Nombre</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
