--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
@@ -25,9 +25,9 @@
     <table id="tablalista" class="table table-bordered table-condensed" style="width: 97%;">
         <thead>
             <tr>
-                <th>MARCA</th>
-                <th>MODELO</th>
-                <th>ACCIONES</th>
+                <th>Marca</th>
+                <th>Modelo</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
