--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
@@ -19,9 +19,10 @@
     <br><div style="width: 99%;">{% include 'CorresponsaliaBundle:Default:_estatusfondo.html.twig' %}</div>
     
     <form id="formguardar" name="formguardar" method="post" action="{{ path('corresponsalia_guardarevisionrendicion',{'idperiodo':periodo.id})}}">
-        <table id="tablalista" style="width: 99%;">
+        <table id="tablalista" class="table table-condensed"  style="width: 99%;">
             <thead>
-                <tr>
+                <tr style="background-color:#1E90FF;color:white;">
+                    <th>ID</th>
                     <th>Nro C.</th>
                     <th>F. Factura</th>
                     <th>Descripcion</th>
@@ -40,7 +41,8 @@
             {% set oculta=0 %}
             {% for entity in rendicionlista %}
                     <tr {% if entity.aprobada==false %} style="background-color: yellow;"{% endif %}>
-                        <td>{{ entity.numerocomprobante }}</td>
+                        <td>{{ entity.id}}</td>
+                        <td> {{entity.numerocomprobante }} </td>
                         <td>{{ entity.fechafactura|date('d-m-Y') }}</td>
                         <td><span style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="{{ entity.descripciongasto.descripcion}}">{{ entity.descripciongasto.descripcion|slice(0,10) }}...</span></td>
                         <td><span style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="{{ entity.nombrerazonsocial}}">{{ entity.nombrerazonsocial|slice(0,10) }}...</span></td>
@@ -64,7 +66,6 @@
 
             </tbody>
         </table> 
-        <br><br><br><br>
         <input id="check_todos" class="btn btn-primary" type="button" value="GUARDAR RENDICIONES PARA CORRECCIÓN">
     </form>
                 
@@ -94,10 +95,6 @@
             </div>
         {% endif %}
     
-    
-    <br>
-    <button id="xxx" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
-
     <script>    
         
         $('span').tooltip()
@@ -114,10 +111,6 @@
 */
       $(document).ready(function(){
 
-         var table = $('#tablalista').dataTable( { //CONVERTIMOS NUESTRO LISTADO DE LA FORMA DEL JQUERY.DATATABLES- PASAMOS EL ID DE LA TABLA
-              "sPaginationType": "full_numbers", //DAMOS FORMATO A LA PAGINACION(NUMEROS)
-              "aaSorting": [[0,'desc']],
-          } );
 
            $("#check_todos").click(function(){
                 var a=0;
