img de pasaporte y reporte de personal 20082014 335pm

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Personal/show.html.twig
@@ -52,7 +52,7 @@
                 <div class="widgetform">
                     {% if extension=='jpg' or extension=='jpeg' or extension=='png' or extension=='gif'  %}
                         <a data-toggle="modal" href="#">
-                            <img class="img-rounded" src="{{ asset(ruta) }}" width="150px">
+                            <img class="img-rounded" src="{{ asset('uploads/personal/') }}{{ entity.id }}.{{extension}}" width="150px">
                         </a>
                     {% else %}
                         <a href="{{ asset(ruta) }}">DESCARGA ARCHIVO {{ extension|upper }}</a>
