--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -92,6 +92,8 @@
             {% endif %}
 
               <li><a href="{{ path('corresponsalia_reporterendicion') }}">Rendición</a></li>
+
+              <li> <a href="{{ path('reportepersonal') }}">Personal</a></li>
           </ul>        
         </li>
       {% endif %}
