--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -139,7 +139,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
     {% if is_granted('ROLE_TECNO_ADMIN') or is_granted('ROLE_TECNO_CORRESPONSALIA') %}
-      <li><a href="{{ path('ayuda_tecno') }}">AYUDA</a></li>
+      <li><a href="{{ path('tecnoayuda') }}">AYUDA</a></li>
       {% endif %}
       <li><a href="{{ path('cambioclave') }}">CAMBIAR CLAVE</a></li>
       <li><a href="{{ path('usuario_logout') }}">SALIR</a></li>
